Refactor to move Recon Results to a Customer subclass.
